@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11489: JSON decoder now accepts lone surrogates.
+
 - Fix test.test_support.bind_port() to not cause an error when Python was
   compiled on a system with SO_REUSEPORT defined in the headers but run on
   a system with an OS kernel that does not support that new socket option.
